# wema-hackaholics7-0-hackathon-uyo-project-team-nova-builders

./: FOID_ABOUT.md  README.md
backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  utils.py
backend/app/models/: kyc.py  user.py
backend/app/routers/: auth.py
backend/app/service/: auth.py
backend/core/: config.py  security.py  session.py
frontend/: index.html
frontend/src/: index.css
